# axon

./: .gitignore  ARCHITECTURE.md  DONE.md  Dockerfile.control-plane  Dockerfile.inference-engine  Makefile  README.md  README_TR.md  buf.gen.yaml  buf.yaml  docker-compose.yml  run.sh  sample-request.md  test.ipynb
.github/workflows/: ci.yml  docker.yml  release.yml
control-plane/: go.mod  go.sum
control-plane/cmd/server/: main.go
control-plane/inference/kfs/: kserve_grpc.pb.go  kserve_grpc_grpc.pb.go
control-plane/internal/client/: inference_client.go
control-plane/internal/config/: config.go
control-plane/internal/health/: checker.go
deploy/grafana/: dashboard.json
deploy/k8s/: deployment.yaml  pvc.yaml  service.yaml  servicemonitor.yaml
docs/: Builtin-Functions.md  CLI-Reference.md  Logging.md
inference-engine/: Cargo.toml  build.rs
inference-engine/src/: grpc_server.rs  http_server.rs  main.rs  server.rs  tokenizer.rs
inference-engine/src/arena/: mod.rs
inference-engine/src/config/: mod.rs
inference-engine/src/metrics/: mod.rs
inference-engine/src/model_repository/: circuit_breaker.rs  config_parser.rs  mod.rs
inference-engine/src/session/: ensemble_runner.rs  mod.rs  onnx_runner.rs  pool.rs  rhai_builtins.rs  rhai_runner.rs  runner.rs  types.rs
local_models/: convert_to_onnx.py  requirements.txt  test_builtin_comparison.py  train_catboost.py  train_lgbm.py  train_sklearn.py  train_xgboost.py  utils.py
ml_model/housing_pipeline/: config.yaml
ml_model/ml_ensemble/: config.pbtxt  config.yaml
ml_model/preprocess_housing/: config.yaml
ml_model/preprocess_ml/: config.pbtxt  config.yaml
ml_model/xgb_housing/: config.pbtxt  config.yaml
nlp_model/: convert_to_onnx.py
nlp_model/decoder/: config.yaml
nlp_model/ner_model/: config.pbtxt  config.yaml
nlp_model/ner_pipeline/: config.pbtxt  config.yaml
nlp_model/nlp_ensemble/: config.pbtxt  config.yaml
nlp_model/pipeline/: config.pbtxt  config.yaml
nlp_model/tokenizer/: config.yaml
(+29 files in other folders)
