[package]
name = "axon-server"
version = "0.3.5"
edition = "2021"

[[bin]]
name = "axon-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
bytes = "1"
dashmap = "6"
ndarray = "0.17"
rayon = "1"
num_cpus = "1"
prometheus = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
arc-swap = "1"
tokio-stream = "0.1"
tracing-opentelemetry = "0.33.0"
opentelemetry = "0.32.0"
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.32.1"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
parking_lot = "0.12"
notify = { version = "7", features = ["macos_fsevent"] }
rhai = { version = "1", features = ["sync"] }

[build-dependencies]
tonic-build = "0.12"
